--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "BROWSER='safari' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://pre-onboarding-selection-task.shop/"
+  "proxy": "https://pre-onboarding-selection-task.shop/",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
